# BoltDIYPersonal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Plan_todo.md  README.md  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  package-lock.json  package.json  vitest.config.ts
Source/: implementation_plan.html
bridge/: env-crosswalk.js  env-crosswalk.test.js  legacy-agent-loader.js  legacy-agent-loader.test.js  old-dashboard.js  old-dashboard.test.js  sqlite-migrate.js  sqlite-migrate.test.js
cli/: bagidea.js  bagidea.test.js  updater.js  updater.test.js
daemon/: channels.js  channels.test.js  compact.js  compact.test.js  db-adapter.js  db-adapter.test.js  godot-ipc.test.js  jobs.js  jobs.test.js  journal.js  journal.test.js  media.js  media.test.js  overlay.html  overlay.test.js  perm.js  perm.test.js  plugin-ctx.js  plugin-ctx.test.js  plugins.js  plugins.test.js  pluginshub.html  project-dispatch.js  project-dispatch.test.js  projects.js  projects.test.js  provider-router.js  provider-router.test.js  providers.js  providers.test.js  proxy.js  proxy.test.js  registry.js  registry.test.js  retrieval.js  retrieval.test.js  server.js  server.test.js  shell.test.js  skills.js  (+11 more)
godot/: project.godot
scripts/: keep-awake.ps1  keep-awake.sh  notify.sh  quickstart.ps1  quickstart.sh  seed.mjs  setup.ts  status.ts  wa-daemon.ts
shell/: Cargo.toml
shell/.cargo/: config.toml
shell/src/: main.rs
src/: agent-config.test.ts  agent-config.ts  agent-create-cli.ts  agent-create.test.ts  agent-create.ts  agent-voice-bridge.test.ts  bot.test.ts  (+85 more)
(+60 files in other folders)
